Ensure basket icon amount does not overflow fixed icon size

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -77,6 +77,7 @@ ul {
 
 .header-dropdown-link {
     width: 80px;
+    min-width: 80px;
 }
 
 .logo-image {
